spec/e2e/variable/duplicate_local.lit
{
  var a = "value";
  var a = "other"; # error: [line 3] Error at "a": Already a variable with this name in this scope.
}
